--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>truffle-vue</title>
+    <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
+    <title>CertChain</title>
   </head>
-  <body>
+  <body style="margin:0; background-color: #aaf8e7;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
