--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="/static/favicon.ico"/>
     <title>CertChain</title>
   </head>
   <body style="margin:0; background-color: #aaf8e7;">
